k8s/overlays/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-template-service
  namespace: sorc3r3r-nodejs-template-staging
